# target-snowflake

./: .flake8  .gitignore  README.md  meltano.yml  pyproject.toml  target-snowflake.sh  tox.ini
.github/workflows/: ci_workflow.yml
target_snowflake/: connector.py  migrator.py  sinks.py  snowflake_migrator.py  snowflake_target.py  stages.py  target.py
target_snowflake/database_target/: csv_sink.py  schema_migrator.py
target_snowflake/sync_schema/: __init__.py  postgres_schema_sync.py
target_snowflake/tests/: conftest.py  test_migrator.py  test_postgres_schema_sync.py
