[tool.poetry]
name = "target-snowflake"
version = "0.0.1"
description = "`target-snowflake` is a Singer target for Snowflake, built with the Meltano SDK for Singer Targets."
authors = ["CJK <julian@fixdapp.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.7"
requests = "^2.25.1"
singer-sdk = "^0.3.8"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
freezegun = "^1.1.0"
flake8 = "^3.9.2"
flake8-bugbear = "^21.9.1"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-snowflake = 'target_snowflake.target:TargetSnowflake.cli'
